update code to postgresql
